# mpl-hig

./: LICENSE  README.md  pyproject.toml
examples/: plot.py
mpl_hig/: __init__.py  hig.py  style.py
